--- a/gold-admin-frontend/src/app/views/partials/content/crud/delete-entity-dialog/delete-entity-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/content/crud/delete-entity-dialog/delete-entity-dialog.component.html
@@ -19,13 +19,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-right">
+		<div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
 			<div class="kt-form__actions kt-form__actions--sm" style="padding: 15px;">
 				<!-- <button mat-button (click)="onNoClick()">Cancel</button>&nbsp;
 				<button mat-button (click)="onYesClick()" color="primary" cdkFocusInitial [disabled]="viewLoading">Delete</button> -->
-				<kt-button [type]="'submit'" [value]="'Delete'" (click)="onYesClick()">
+				<kt-button [type]="'submit'" [value]="'Yes'" (click)="onYesClick()">
 				</kt-button> &nbsp;
-				<kt-button [type]="'reset'" [value]="'Cancel'" (click)="onNoClick()">
+				<kt-button [type]="'reset'" [value]="'No'" (click)="onNoClick()">
 				</kt-button>
 
 			</div>
