--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
@@ -91,7 +91,7 @@
 <ng-template #menuItemTextTemplate let-item="item" let-parentItem="parentItem">
 	<!-- if menu item has icon -->
 	<i *ngIf="item.icon" class="kt-menu__link-icon" [ngClass]="item.icon"></i>
-    <img *ngIf="item.src"   [src]="item.src" height="25">
+	<img *ngIf="item.src" [src]="item.src" height="25" class="kt-margin-r-15">
 
 
 	<!-- if menu item using bullet -->
