--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <!-- begin:: Header Topbar -->
-<div class="kt-header__topbar kt-margin-t-10 ">
-    <div class="row justify-content-center"> 
+<div class="kt-header__topbar">
+    <div class="row justify-content-center">
         <div class="col-4 align-self-center">
             <div class="kt-subheader__main m-0" [hidden]="subheaderService.disabled$ | async" id="kt_subheader">
                 <label *ngIf="title" class="kt-subheader__title">{{title}}</label>
