--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -217,7 +217,7 @@ input[type="number"] {
 }
 
 .custom-checkbox input:disabled ~ .checkmark {
-	background-color: #eee;
+	background-color: #454d67;
 	opacity: 0.5;
 	cursor: not-allowed;
 }
