--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
@@ -19,37 +19,37 @@
 					<!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Role Name</mat-header-cell>
 					<mat-cell *matCellDef="let role">
-						<div class="font-weight-bold text-color" (click)="permissions(role)">
-							{{role.name}}
+						<div class="font-weight-bold text-color kt-pointer" (click)="permissions(role)">
+							{{role.roleName | titlecase}}
 						</div>
 					</mat-cell>
 				</ng-container>
 
 				<ng-container matColumnDef="createdBy">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Created By</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.calories}}</mat-cell>
+					<mat-cell *matCellDef="let role">{{role.createdByUser.firstName | titlecase}} &nbsp; {{role.createdByUser.lastName | titlecase}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedBy">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified By</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.carbs}}</mat-cell>
+					<mat-cell *matCellDef="let role">{{role.updatedByUser.firstName | titlecase}} &nbsp; {{role.updatedByUser.lastName | titlecase}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedDate">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Date</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.fat}}</mat-cell>
+					<mat-cell *matCellDef="let role">{{role.createdAt | date:'mediumDate'}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="modifiedTime">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Time</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.protein}}</mat-cell>
+					<mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}}</mat-cell>
 				</ng-container>
 
 				<ng-container matColumnDef="action">
 					<mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
 					<mat-cell *matCellDef="let role">
 						<div [ngStyle]="{'display': 'inherit'}">
-							<div (click)="editRole(role,'edit')" class="kt-pointer text-color font-weight-bold"> Edit |
+							<div (click)="editRole(role,'Update')" class="kt-pointer text-color font-weight-bold"> Edit |
 								&nbsp;
 							</div>
-							<div class="kt-pointer text-color font-weight-bold" (click)="deleteRole(role)">Delete</div>
+							<div class="kt-pointer text-color font-weight-bold" (click)="deleteRole(role.id)">Delete</div>
 						</div>
 					</mat-cell>
 				</ng-container>
