--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
@@ -6,8 +6,8 @@
 
 					<div class="row kt-padding-t-15">
 						<!-- Mobile -->
-						<div class="col-4 align-self-center">
-							<label  class="mandatory  text-color font-weight-500">Mobile Number</label>
+						<div class="col-4 align-self-center form-label">
+							<label class="mandatory  text-color font-weight-500">Mobile Number</label>
 						</div>
 
 						<div class="col-8">
@@ -88,8 +88,8 @@
 					</div>
 
 					<div class="row kt-padding-t-15">
-						<div class="col-4 align-self-center">
-							<label  class="  text-color font-weight-500">Full Name</label>
+						<div class="col-4 align-self-center form-label">
+							<label class="mandatory  text-color font-weight-500">Full Name</label>
 						</div>
 
 						<div class="col-4">
@@ -125,8 +125,8 @@
 
 					<div class="row kt-padding-t-15">
 						<!-- PAN -->
-						<div class="col-4 align-self-center">
-							<label  class="mandatory  text-color font-weight-500">Pan Number</label>
+						<div class="col-4 align-self-center form-label">
+							<label class="mandatory  text-color font-weight-500">PAN</label>
 						</div>
 
 						<div class="col">
