--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -69,6 +69,8 @@ body {
 .success-button {
 	color           : #fff !important;
 	background-color: rgb(24, 179, 24) !important;
+	border-radius: 9px !important;
+	font-family: 'Poppins';
 }
 
 .form-label {
