--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -8,16 +8,18 @@
             <div class="row justify-content-center">
               <div class="col-10">
                 <label class="custom-checkbox">
-                  <span class="label-checkbox text-color font-weight-500" >Select All</span>
-                  <input type="checkbox" class="" id="view" [checked]="selectAllArray[0]" (change)="selectAllCat($event.target.checked,'category')">
-                  <span class="checkmark top-0"></span>
+                  <span class="label-checkbox text-color font-weight-500">Select All</span>
+                  <input type="checkbox" class="" id="view" [checked]="selectAll.cat"
+                    (change)="selectAllCat($event.target.checked,'category')">
+                  <span class="checkmark top-0" #checkboxOne></span>
                 </label>
                 <div class="row kt-margin-t-15">
                   <div class="col-12 kt-margin-t-10" *ngFor="let category of permissions;index as idx">
                     <label class="custom-checkbox">
                       <span
                         class="label-checkbox text-color font-weight-500">{{category.categoryName | titlecase}}</span>
-                      <input type="checkbox" class="" id="view" [checked]="category.isChecked" (change)=categoryCheckBox($event.target.checked,category,idx)>
+                      <input type="checkbox" class="" id="view" [checked]="category.isSelected"
+                        (change)=categoryCheckBox($event.target.checked,idx)>
                       <span class="checkmark top-0"></span>
                     </label>
                   </div>
@@ -30,23 +32,25 @@
               <div class="col-10">
                 <label class="custom-checkbox">
                   <span class="label-checkbox text-color font-weight-500">Select All</span>
-                  <input type="checkbox" class="" id="view" value="View" [checked]="selectAllArray[1]" (change)="selectAllSub($event.target.checked)">
-                  <span class="checkmark top-0"></span>
+                  <input type="checkbox" class="" id="view" value="View" [checked]="selectAll.subCat"
+                    (change)="selectAllSub($event.target.checked)">
+                  <span class="checkmark top-0" #checkboxTwo></span>
                 </label>
                 <div class="row kt-margin-t-15">
-                  <div class="col-12 kt-margin-t-10" *ngFor="let category of checkedCategory;index as idx">
-                    <!-- <div *ngIf="checkedCategory.includes(permission.id)"> -->
-                      <p class=" text-color font-weight-500">{{category.categoryName | titlecase}}</p>
-                      <div *ngFor="let sub of category.subCategory;index as idx" class="position-relative kt-margin-l-15">
-                        <label class="custom-checkbox">
-                          <span
-                            class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{sub.subCategoryName | titlecase}}</span>
-                          <input type="checkbox" class="" id="view" [checked]="sub.isChecked"
-                            (change)=subCategoryCheckBox($event.target.checked,category,idx)>
-                          <span class="checkmark top-0"></span>
-                        </label>
-                      </div>
-                    <!-- </div> -->
+                  <div class="col-12 kt-margin-t-10" *ngFor="let category of permissions;index as Catidx">
+                    <div *ngIf="category.isSelected">
+                    <p class=" text-color font-weight-500">{{category.categoryName | titlecase}}</p>
+                    <div *ngFor="let sub of category.subCategory;index as Subidx"
+                      class="position-relative kt-margin-l-15">
+                      <label class="custom-checkbox">
+                        <span
+                          class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{sub.subCategoryName | titlecase}}</span>
+                        <input type="checkbox" class="" id="view" [checked]="sub.isSelected"
+                          (change)=subCategoryCheckBox($event.target.checked,Catidx,Subidx)>
+                        <span class="checkmark top-0"></span>
+                      </label>
+                    </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -57,36 +61,37 @@
               <div class="col-10">
                 <label class="custom-checkbox">
                   <span class="label-checkbox text-color font-weight-500">Select All</span>
-                  <input type="checkbox" class="" id="view" value="View" [checked]="selectAllArray[2]" (change)="selectAllProd($event.target.checked)">
-                  <span class="checkmark top-0"></span>
+                  <input type="checkbox" class="" id="view" value="View" [checked]="selectAll.pro"
+                    (change)="selectAllProd($event.target.checked)">
+                  <span class="checkmark top-0" #checkboxThree></span>
                 </label>
                 <div class="row kt-margin-t-15">
-                  <div class="col-12 kt-margin-t-10" *ngFor="let category of checkedSubCategory;index as idx">
-                    <!-- <div *ngIf="checkedSubCategory.includes(permission.id)"> -->
+                  <div class="col-12 kt-margin-t-10" *ngFor="let category of permissions;index as catIndex">
+                    <div *ngIf="category.isSelected">
                       <p class=" text-color font-weight-500">{{category.categoryName | titlecase}}</p>
-                      <div *ngFor="let sub of category.subCategory;index as idx">
-                        <!-- <div *ngIf="checkedSubCategory.includes(sub.id)"> -->
+                      <div *ngFor="let sub of category.subCategory;index as subIndex">
+                        <div *ngIf="sub.isSelected">
                           <p class=" text-color font-weight-500 kt-margin-l-15">{{sub.subCategoryName | titlecase}}</p>
-                          <div class="row justify-content-start kt-margin-l-40">
-                            <div *ngFor="let product of sub.products;index as idx" class="w-25">
-                              <span  class="position-relative " >
-                                <label class="custom-checkbox" >
-                                  <span
-                                    class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{product.productName | titlecase}}</span>
-                                  <input type="checkbox" [checked]="product.isChecked" (change)="generateProduct($event.target.checked,product.id,idx)">
-                                  <span class="checkmark top-0"></span>
-                                </label>
-                              </span>
-                            </div>
+                        <div class="row justify-content-start kt-margin-l-40">
+                          <div *ngFor="let product of sub.products;index as idx" class="col-4">
+                            <span class="position-relative ">
+                              <label class="custom-checkbox">
+                                <span
+                                  class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{product.productName | titlecase}}</span>
+                                <input type="checkbox" [checked]="product.isSelected"
+                                  (change)="generateProduct($event.target.checked,catIndex,subIndex,idx)">
+                                <span class="checkmark top-0"></span>
+                              </label>
+                            </span>
                           </div>
-                         
-                        <!-- </div> -->
+                        </div>
+                        </div>
                       </div>
-                    <!-- </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>      
+            </div>
           </mat-tab>
         </mat-tab-group>
       </div>
