--- a/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/permissions/permissions.component.html
@@ -3,7 +3,7 @@
     <kt-portlet>
         <kt-portlet-body>
             <mat-accordion>
-                <mat-expansion-panel *ngFor="let permission of permissions;index as i;last as l;" [expanded]="i==l">
+                <mat-expansion-panel *ngFor="let permission of permissions;index as moduleIndex;last as l;" [expanded]="moduleIndex==l">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
                             {{permission.moduleName | titlecase}}
@@ -11,19 +11,19 @@
                     </mat-expansion-panel-header>
 
                     <div class="kt-padding-10">
-                        <div class="row card-border" *ngFor="let entity of permission.entity;index as i;first as f" [class.kt-margin-t-15]="i!=f" >
+                        <div class="row card-border" *ngFor="let entity of permission.entity;index as entityIndex;first as f" [class.kt-margin-t-15]="entityIndex!=f" >
                             <div class="col-12">
                                 <div class="row line-height justify-content-center">
                                     <div class="col-2">
                                         <label class="text-color font-weight-bold">{{entity.entityName | titlecase}}</label>
                                     </div>
                                     <div class="col-1">
-                                        <mat-slide-toggle></mat-slide-toggle>
+                                        <mat-slide-toggle [checked]="entity.isSelected" (change)="toogleChange($event.checked,moduleIndex,entityIndex)"></mat-slide-toggle>
                                     </div>
-                                    <div class="col-2" *ngFor="let action of entity.permission">
+                                    <div class="col-2" *ngFor="let action of entity.permission;index as permissionIndex">
                                         <label class="custom-checkbox">
                                             <span class="label-checkbox">{{action.actionName |titlecase}}</span>
-                                            <input type="checkbox" class="" id="view" value="View">
+                                            <input type="checkbox" [checked]="action.isSelected" (change)="actionChange($event.target.checked,moduleIndex,entityIndex,permissionIndex)">
                                             <span class="checkmark"></span>
                                         </label>
                                     </div>
@@ -34,4 +34,9 @@
                 </mat-expansion-panel>
             </mat-accordion>
         </kt-portlet-body>
+        <kt-portlet-footer>
+            <div class="text-right kt-margin-10 kt-margin-r-25">
+                <kt-button [value]="'Save'" [type]="'button'" (click)="submit()"></kt-button>
+            </div>
+        </kt-portlet-footer>
     </kt-portlet>
